# template-helm-django

./: .pre-commit-config.yaml  Dockerfile  README.md  deploy.yaml  main.py  package-lock.json  package.json  pyproject.toml  report.ipynb  requirements.txt  serverless.yml  tiphys.yaml  warm_up.py
.github/: pull_request_template.md
.github/workflows/: aws-lambda.yml  k8s.yml  pre-commit.yaml
mrwork/: asgi.py  settings.py  urls.py  wsgi.py
mrwork/workflows/: views.py
templates/: index.html
