[tool.poetry]
name = "tiphyspy"
version = "0.1.0"
description = ""
authors = ["Abhi Yerra <abhi@berkeley.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.2.3"
opszero-rustypy = "^0.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
